Fix get sample button UI on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -169,36 +169,6 @@ h3 {
     height: 200px;
 }
 
-#sources-list li p {
-    visibility: hidden;
-    margin-top:-22px;
-
-}
-
-#sources-list li:hover p{
-    visibility: visible;
-    background-color:white;
-    margin-top:-22px;
-}
-
-#sources-list li:hover a{
-    visibility: hidden;
-}
-
-#openingsoon {
-
-}
-
-#openingsoon:hover span{
-    display: none;
-}
-
-#openingsoon:hover:after{
-    color: #a5a6ac;
-    content:" (coming soon!)";
-}
-
-
 ul {
     text-decoration: none;
 }
@@ -280,6 +250,8 @@ section {
     border: none;
     cursor: pointer;
     border-radius: 0 .3em .3em 0;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0 .3em .3em 0;
 }
 .freelance-proj-email-button:hover {
     opacity: 0.8;
